@@ -546,7 +546,7 @@ def clear_mappers():
         for mapper in mapper_registry.values():
             mapper.dispose()
         mapper_registry.clear()
-        mapperlib.ClassKey.dispose()
+        mapperlib.ClassKey.dispose(mapperlib.ClassKey)
     finally:
         mapperlib._COMPILE_MUTEX.release()
         
